[gd_scene load_steps=4 format=3 uid="uid://lbiar7bvu0d6"]

[ext_resource type="Script" path="res://scripts/AudioManager.gd" id="1_vwgwk"]
[ext_resource type="AudioStream" uid="uid://inflyfrfxqu7" path="res://music/refract.mp3" id="2_1shli"]
[ext_resource type="AudioStream" uid="uid://b77xbhcraw287" path="res://music/mixkit-arcade-game-complete-or-approved-mission-205.wav" id="3_j8h73"]

[node name="Node3D" type="Node3D"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.121569, 0.121569, 0.772549)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16

[node name="Master Label" type="Label" parent="Control/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Master"
horizontal_alignment = 1

[node name="Master Slider" type="HSlider" parent="Control/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Background Label" type="Label" parent="Control/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Background"
horizontal_alignment = 1

[node name="Background Slider" type="HSlider" parent="Control/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Sound Effect Label" type="Label" parent="Control/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Sound Effect"
horizontal_alignment = 1

[node name="Sound Effect Slider" type="HSlider" parent="Control/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="AudioManager" type="Node3D" parent="."]
script = ExtResource("1_vwgwk")

[node name="Background" type="Node3D" parent="AudioManager"]

[node name="Refractor" type="AudioStreamPlayer" parent="AudioManager/Background"]
stream = ExtResource("2_1shli")

[node name="Sound Effect" type="Node3D" parent="AudioManager"]

[node name="Arcade" type="AudioStreamPlayer" parent="AudioManager/Sound Effect"]
stream = ExtResource("3_j8h73")

[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/GridContainer/Master Slider" to="AudioManager" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/GridContainer/Background Slider" to="AudioManager" method="_on_background_slider_value_changed"]
[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/GridContainer/Sound Effect Slider" to="AudioManager" method="_on_sound_effect_slider_value_changed"]
